--- a/prologin/users/templates/users/edit.html
+++ b/prologin/users/templates/users/edit.html
@@ -30,8 +30,7 @@
 <div class="row">
 <!-- Delete Account -->
 	<div class="Subhead Subhead--spacious">
-	  <h1 style = "color: #d9534f;"> <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
- Delete account</h1>
+	  <h1 style = "color: #d9534f;"> <i class="fa fa-exclamation-triangle" aria-hidden="true"></i> Delete account</h1>
 	</div>
 
   
