fixed css and icon too big

--- a/prologin/users/templates/users/edit.html
+++ b/prologin/users/templates/users/edit.html
@@ -29,11 +29,8 @@
 <br />
 <div class="row">
 <!-- Delete Account -->
-	<div class="Subhead Subhead--spacious">
-	  <h1 style = "color: #d9534f;"> <i class="fa fa-exclamation-triangle" aria-hidden="true"></i> Delete account</h1>
-	</div>
+	<h1 class = "text-danger"> <i class="fa fa-exclamation-triangle fa-xs" aria-hidden="true"></i> Delete account</h1>
 
-  
   <p>{% trans "Are you sure you want to delete your account?" %}</p>
   <p>{% trans "This will delete all your personal information, all your posts on the forum and all the code you have submitted." %}</p>
 
