forum: add ReadState to show unread posts.
Fixes #81

Co-authored-by: Antoine Pietri <antoine.pietri@prologin.org>

--- a/prologin/forum/static/css/forum.css
+++ b/prologin/forum/static/css/forum.css
@@ -148,6 +148,10 @@
   font-weight: bold;
 }
 
+.thread-unread {
+  font-weight: bold;
+}
+
 .forum-post {
   background: #f5f5f5;
   border-bottom: 3px solid #202b66;
