Rework emoji system
Remove dependency for emojione and instead use pure utf8 emojis with
emoji-picker.

Fixes #65

--- a/prologin/forum/static/css/forum.css
+++ b/prologin/forum/static/css/forum.css
@@ -215,3 +215,17 @@
   }
 
 }
+
+/* Emoji Picker fix */
+
+div.create-thread-fix i.emoji-picker-icon {
+  right: 22px;
+}
+
+div.create-thread-fix div.emoji-menu {
+  right: 16px;
+}
+
+div.form-group>div {
+  position: relative;
+}
