--- a/prologin/forum/templates/forum/thread_posts.html
+++ b/prologin/forum/templates/forum/thread_posts.html
@@ -184,6 +184,7 @@
 {% endblock %}
 
 {% block extra_script %}
+  {{ block.super }}
   {% include "stub-mathjax.html" %}
   <script type="text/javascript">
     /* When clicking permalinks, just scroll to message, don't do the full redirect */
