--- a/prologin/forum/templates/forum/create_thread.html
+++ b/prologin/forum/templates/forum/create_thread.html
@@ -18,7 +18,9 @@
   </h1>
   <form class="form form-horizontal" method="POST">
     {% csrf_token %}
-    {{ form|bootstrap_horizontal }}
+    <div class="create-thread-fix">
+      {{ form|bootstrap_horizontal }}
+    </div>
     <div class="form-group"><div class="col-sm-10 col-lg-10 col-sm-offset-2 col-lg-offset-2">
       <button type="submit" class="btn btn-primary"><i class="fa fa-send"></i> {% trans "Create the new thread" %}</button>
       <button type="submit" class="btn btn-default" formaction="#preview" name="preview" value="1"><i class="fa fa-file-text"></i> {% trans "Preview" context "Preview, the action (button)" %}</button>
@@ -33,5 +35,6 @@
 {% endblock %}
 
 {% block extra_script %}
+  {{ block.super }}
   {% include "stub-mathjax.html" %}
 {% endblock %}
