--- a/prologin/prologin/templates/prologin/main-menu.html
+++ b/prologin/prologin/templates/prologin/main-menu.html
@@ -21,6 +21,8 @@
       {% if can_correct %}<li><a href="{% url 'documents:index' %}"><i class="fa fa-fw fa-archive"></i> {% trans "Documents" %}</a></li>{% endif %}
       {% has_perm 'mailing.admin' request.user as can_do_mailing %}
       {% if can_do_mailing %}<li><a href="{% url 'mailing:dashboard' %}"><i class="fa fa-fw fa-envelope-o"></i> {% trans "Mailing" %}</a></li>{% endif %}
+      {% has_perm 'dashboard.view' request.user as can_view_dashboard %}
+      {% if can_view_dashboard %}<li><a href="{% url 'dashboard:index' %}"><i class="fa fa-fw fa-thermometer"></i> {% trans "Dashboard" %}</a></li>{% endif %}
       {% has_perm 'users.search' request.user as can_search %}
       {% if can_search %}
       <li>
