gcc: describe index structure

--- a/prologin/gcc/templates/gcc/index.html
+++ b/prologin/gcc/templates/gcc/index.html
@@ -4,6 +4,32 @@
 
 {% block content %}
 <section>
+	<!-- Logo et collage -->
 	<h1>Bienvenue sur le site de GCC!</h1>
+	<a href="{% url "home" %}">by Prologin</a>
+</section>
+
+<section>
+	<!-- affiche actuelle et FAQ -->
+	<img src="" alt="Affiche GCC!">
+	<aside>
+		<h2>FAQ</h2>
+		<ul>
+			<!-- nth-child odd/even pour styliser question/reponse -->
+			<li></li>
+			<li></li>
+		</ul>
+</section>
+
+<section>
+	<!-- Inscriptions encore ouvertes (grille) -->
+</section>
+
+<section>
+	<!-- Form signup newsletter -->
+</section>
+
+<section>
+	<!-- Sponsors -->
 </section>
 {% endblock %}
