--- a/prologin/gcc/templates/gcc/base.html
+++ b/prologin/gcc/templates/gcc/base.html
@@ -7,6 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="{% static "gcc/css/style.css"%}">
 		<link rel="stylesheet" href="{% static 'lib/css/font-awesome.min.css' %}"/>
+		{% block head %}{% endblock %}
 	</head>
 	<body>
 		<header>
